--- a/views/login.pug
+++ b/views/login.pug
@@ -3,11 +3,11 @@ html
   include head.pug
   
   body
-    div(class="mx-auto" style="width:200px; margin-top:200px;")
+    div(class="mx-auto" style="width:300px; margin-top:200px;")
       h2 Sample Authentication Demo
       if hasError
-        .errMessage
-          p #{errorMessage}
+        .err
+          p.err__message #{errorMessage}
       form(action="users/login" method="post")
         label(for="email__field") Email
         input(id="email__field" name="email" type="email" style="width: 100%")
