--- a/views/head.pug
+++ b/views/head.pug
@@ -6,6 +6,6 @@ head
   script(  src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous")
-  link(rel="stylesheet", href="css/style.css")
+  link(rel="stylesheet", href="/css/style.css")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js")
   script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js")
