--- a/views/signup.pug
+++ b/views/signup.pug
@@ -7,8 +7,9 @@ html
     
     div(class="mx-auto" style="width:200px; margin-top:200px")
       h2 Register New User
-      if err
-        p=err
+      if hasError
+        .err
+          p.err__message=errorMessage
       form(action="../users" method="post")
         input(class="form-check-input" name="isAdmin" value="true" type="checkbox" id="admin-toggle" required)
         label(class='form-check-label' for="admin-toggle") Admin
