--- a/views/profile.pug
+++ b/views/profile.pug
@@ -3,11 +3,14 @@ html
   head
     include head.pug
   body
-    .container(style="width:900px; margin-top:100px;")
-      h2 Welcom #{user.display_name}!
-
-      if user.isAdmin
-        p you are logged in as an Administrator
-      else
-        p you are logged in as a User
-      button(class='btn btn-dark' onclick="window.location='./logout'") Log Out
+    .header
+      .container()
+        .profile__header
+          .profile__dongle
+          h2.profile__heading #{user.display_name}
+          button(class='btn btn-dark logout' onclick="window.location='./logout'") Log Out
+    section
+      .container
+        h3 Members
+        .members
+    script(src="/profile.js")
