added for element for image url, user images now displayed on profile page

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -20,6 +20,8 @@ html
         input(id="email__field" name="email" type="email" required)
         label(for="password") Password: 
         input(name="password" type="password" required)
+        label(for="email__field") Profile Image URL: 
+        input(id="email__field" name="image_url" required)
         .admin-check(style="margin-left:20px;margin-top:10px" )
 
         input(type="submit" class="btn btn-dark" style="margin-top:10px; float:right;" value="Submit")
