--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,12 +13,7 @@
 }
 
 
-  @media(max-width: 599px) {
-    html{
-      font-size:12px;
-    }
 
-   }
 body{
   height: 100%;
   color: #f5f5f5;
@@ -142,3 +137,12 @@ body{
   color: black;
   text-align: center;
 }
+
+@media(max-width: 599px) {
+  html{
+    font-size:12px;
+  }
+  .profile{
+    margin-top: 5rem;
+  }
+ }
