--- a/views/head.pug
+++ b/views/head.pug
@@ -1,7 +1,7 @@
 head
   meta(name="viewport" content="width=device-width, initial-scale=1")
   meta(name="theme-color" conent="#FF0000")
-  title This works
+  title Sample Authentication Demo
   link(rel="stylesheet",  href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css")
   script(  src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
